fixing some spacing, adding new section

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -48,6 +48,7 @@ h3 {
   font-style: normal;
   font-weight: 700;
   line-height: 140%; /* 28px */
+  margin: 0px;
 }
 
 img {
